--- a/indexStyle.css
+++ b/indexStyle.css
@@ -174,7 +174,7 @@ footer{
     color:rgb(233, 233, 233);
     font-family: 'Open Sans';
     font-size:14px;
-    padding-bottom:60px;
+    padding-bottom:10px;
     margin-top:20px;
 }
 
@@ -190,19 +190,19 @@ pre{
 
 a{
     transition-timing-function: ease-in-out;
-    padding:10px;
-    margin: 70px 0px 70px 0px;
+    padding-top:10px;
+    margin: 10px 0px 10px 0px;
     text-decoration: none;
     color:rgb(200, 200, 200);
     background-color: inherit;
     font-family: 'Open Sans';
     font-size:20px;
-    line-height: 50px;
+    line-height: 10px;
 }
 
 a:hover{
     transition-timing-function: ease-in-out;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid rgb(177, 177, 177);
 }
 
 .socials p{
